--- a/bio.html
+++ b/bio.html
@@ -20,7 +20,7 @@
 
 				<h2>Como trabalho</h2>
 
-				<blockquote>
+				<blockquote class="comentario-fiat">
 					<p>João é o melhor desenvolvedor front-end com quem já trabalhei. Muito eficiente e muito capaz. Recomendo sem dúvidas!</p>
 					<cite>José Souza, Fiat</cite>
 				</blockquote>
@@ -31,7 +31,7 @@
 
 				<h2>Experiência</h2>
 
-				<blockquote>
+				<blockquote class="comentario-petrobras">
 					<p>João domina as tecnologias como ninguém. Eu apresentava um problema, ele tinha na ponta da língua a solução mais adequada com as tecnologias mais recentes.</p>
 					<cite>Manoel Santos, Petrobrás</cite>
 				</blockquote>
@@ -45,7 +45,7 @@
 				<p>Procuro repassar meu conhecimento para a comunidade. Para isso, já dei <a href="portfolio.html">diversas palestras</a> e mantenho um <a href="blog.html">blog</a>.</p>
 			</div>
 		</main>
-		<img src="eu.jpg" alt="Foto de João da Silva">
+		<img src="img/eu.jpg" alt="Foto de João da Silva">
 		<aside>
 			<h1>João da Silva</h1>
 			<nav>
@@ -57,6 +57,23 @@
 					<li><a href="contato.html">Contato</a></li>
 				</ul>
 			</nav>
+			<ul class="icones-sociais">
+			    <li>
+			        <a class="github" href="https://github.com/joaodasilva">
+			            github
+			        </a>
+			    </li>
+			    <li>
+			        <a class="twitter" href="https://twitter.com/joaodasilva">
+			            twitter
+			        </a>
+			    </li>
+			    <li>
+			        <a class="linkedin" href="https://br.linkedin.com/pub/joão-da-silva/32/4/508">
+			           linkedin
+			        </a>
+			    </li>
+			</ul>
 		</aside>
 		<footer>
 			&copy; João da Silva 2014
