--- a/bio.html
+++ b/bio.html
@@ -45,7 +45,7 @@
 				<p>Procuro repassar meu conhecimento para a comunidade. Para isso, já dei <a href="portfolio.html">diversas palestras</a> e mantenho um <a href="blog.html">blog</a>.</p>
 			</div>
 		</main>
-		<img src="img/eu.jpg" alt="Foto de João da Silva">
+		<img class="minha-foto" src="img/eu.jpg" alt="Foto de João da Silva">
 		<aside>
 			<h1>João da Silva</h1>
 			<nav>
@@ -75,7 +75,7 @@
 			    </li>
 			</ul>
 		</aside>
-		<footer>
+		<footer class="rodape">
 			&copy; João da Silva 2014
 		</footer>
 	</body>
